{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "fccbab40-8a06-9596-ff97-46ee676a634f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecs_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06665be08972766d8",
            "arn": "arn:aws:ec2:us-east-2:576366844090:instance/i-04afeb68b2156436f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "compliance-checker-demo-ecs-instance-profile",
            "id": "i-04afeb68b2156436f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0574f738f1a6a79ac",
            "private_dns": "ip-10-0-1-156.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-18-191-123-34.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.123.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07df471ca501a0e94",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09cdc86255ff9a7e9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d36a41338a91011",
            "tags": {
              "Environment": "Demo-Zero-Cost",
              "Name": "compliance-checker-demo-ecs-host",
              "Project": "compliance-checker-demo"
            },
            "tags_all": {
              "Environment": "Demo-Zero-Cost",
              "Name": "compliance-checker-demo-ecs-host",
              "Project": "compliance-checker-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cdc86255ff9a7e9"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.main",
            "aws_iam_instance_profile.ecs_instance_profile",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "data.aws_ami.ecs_optimized",
            "data.aws_iam_role.existing_ecs_instance_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:576366844090:internet-gateway/igw-052ef1c4138926b06",
            "id": "igw-052ef1c4138926b06",
            "owner_id": "576366844090",
            "tags": {
              "Name": "compliance-checker-demo-igw"
            },
            "tags_all": {
              "Name": "compliance-checker-demo-igw"
            },
            "vpc_id": "vpc-0c45ee6f754f40536"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:576366844090:route-table/rtb-03981de2c1b920cfc",
            "id": "rtb-03981de2c1b920cfc",
            "owner_id": "576366844090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052ef1c4138926b06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "compliance-checker-demo-route-table"
            },
            "tags_all": {
              "Name": "compliance-checker-demo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45ee6f754f40536"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0419a85f553e4cca5",
            "route_table_id": "rtb-03981de2c1b920cfc",
            "subnet_id": "subnet-02d36a41338a91011"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d8df5436a89cbb",
            "route_table_id": "rtb-03981de2c1b920cfc",
            "subnet_id": "subnet-05f912797743a3343"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:576366844090:security-group/sg-09cdc86255ff9a7e9",
            "description": "Allows HTTP traffic to the ECS host and SSH for management",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cdc86255ff9a7e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "compliance-checker-demo-ec2-sg",
            "name_prefix": "",
            "owner_id": "576366844090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "compliance-checker-demo-ec2-sg"
            },
            "tags_all": {
              "Name": "compliance-checker-demo-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c45ee6f754f40536"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:576366844090:subnet/subnet-02d36a41338a91011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d36a41338a91011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576366844090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "compliance-checker-demo-public-a"
            },
            "tags_all": {
              "Name": "compliance-checker-demo-public-a"
            },
            "vpc_id": "vpc-0c45ee6f754f40536"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:576366844090:subnet/subnet-05f912797743a3343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f912797743a3343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576366844090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "compliance-checker-demo-public-b"
            },
            "tags_all": {
              "Name": "compliance-checker-demo-public-b"
            },
            "vpc_id": "vpc-0c45ee6f754f40536"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:576366844090:vpc/vpc-0c45ee6f754f40536",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e64658e7d8a7d901",
            "default_route_table_id": "rtb-04fb757a8533a326f",
            "default_security_group_id": "sg-086fb148294b273e3",
            "dhcp_options_id": "dopt-0fec339755b4ddb83",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c45ee6f754f40536",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fb757a8533a326f",
            "owner_id": "576366844090",
            "tags": {
              "Environment": "Demo",
              "Name": "compliance-checker-demo-vpc",
              "Project": "compliance-checker-demo"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "compliance-checker-demo-vpc",
              "Project": "compliance-checker-demo"
            }
          }
        }
      ]
    }
  ]
}